# JarvisAI

./: .gitignore  jarvis.py  pyproject.toml  requirements.txt
agents/core/: agent.py  agent.py.v1  loader.py  manager.py  selector.py.bak  selector.py.bak2  selector.py.pre_hybrid  synthesizer.py
agents/profiles/: aegis.yaml  athena.yaml  atlas.yaml  forge.yaml  orion.yaml  sentinel.yaml
agents/registry/: registry.py
api/: main.py  main.py.bak_before_stream  main.py.debug_backup  main.py.pre_openwebui  main.py.pre_sessions  main.py.save
api/services/: request_router.py
brain/core/: app.py
brain/services/: ollama.py  ollama.py.save
capabilities/core/: capability.py  manager.py  registry.py
cli/: main.py
config/: research.json
conversation/: main.py  main.py.bak  main.py.bak2  main.py.pre_separated_context
conversation/history/: chat_history.py  chat_history.py.bak
core/: application.py
dispatcher/: model_selector.py
docker/open-webui/: docker-compose.yml
engine/runners/: base_runner.py
gateway/config/: providers.py
gateway/core/: gateway.py
gateway/providers/: ollama.py
jarvis_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
kernel/core/: kernel.py
orchestrator/core/: orchestrator.py  orchestrator.py.bak  orchestrator.py.error  orchestrator.py.pre_context
planner/: main.py
planner/core/: planner.py
planner/models/: task.py
research/core/: gateway.py  router.py
research/models/: search_result.py
research/providers/: duckduckgo.py  (+3 more)
resources/: manager.py
tests/: test_agent_box.py  test_orchestrator.py
(+14 files in other folders)
