[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai"
version = "0.1.0"
description = "JARVIS Engineering AI"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "requests",
]

[project.scripts]
jarvis = "cli.main:app"

[tool.setuptools]
packages = [
    "brain",
    "brain.core",
    "brain.services",
    "cli",
]
